grammar.js
    source_file: $ => seq(repeat($._fullstmt), optional($.__DATA__)),
    /****
     * Main grammar rules taken from perly.y.
     ****/
    block: $ => seq($._PERLY_BRACE_OPEN, repeat($._fullstmt), '}'),

    _fullstmt: $ => choice($._barestmt, $.statement_label),

    // perly.y calls this labfullstmt
    statement_label: $ => seq(field('label', $.identifier), ':', field('statement', $._fullstmt)),

    package_statement: $ => choice(
      seq('package', field('name', $.package), optional(field('version', $._version)), $._PERLY_SEMICOLON),
      seq('package', field('name', $.package), optional(field('version', $._version)), $.block),
    ),
    use_version_statement: $ => seq($._KW_USE, field('version', $._version), $._PERLY_SEMICOLON),
    use_statement: $ => seq(
      $._KW_USE,
      field('module', $.package),
      optional(field('version', $._version)),
      optional($._listexpr),
      $._PERLY_SEMICOLON
    ),

    phaser_statement: $ => seq(field('phase', $._PHASE_NAME), $.block),

    conditional_statement: $ =>
      seq($._conditionals, '(', field('condition', $._expr), ')',
        field('block', $.block),
        optional($._else)
      ),
    loop_statement: $ =>
      seq($._loops, '(', field('condition', $._expr), ')',
        field('block', $.block),
      ),
    cstyle_for_statement: $ =>
      seq($._KW_FOR,
        '(',
          field('initialiser', optional($._expr)), ';',
          field('condition',   optional($._expr)), ';',
          field('iterator',    optional($._expr)),
        ')',
        $.block
      ),
    for_statement: $ =>
      seq($._KW_FOR,
        optional(choice(
          seq('my', field('my_var', $.scalar)),
          seq('state', field('state_var', $.scalar)),
          seq('our', field('var', $.scalar)),
          field('var', $.scalar),
          seq('my', paren_list_of($.scalar)),
        )),
        '(', field('list', $._expr), ')',
        field('block', $.block),
      ),

    try_statement: $ => seq(
      'try',
      field('try_block', $.block),
      'catch', '(', field('catch_variable', $.scalar), ')',
      field('catch_block', $.block),
      ...IF_PERL_VER(5.36,
        optseq('finally', field('finally_block', $.block))
      ),
    ),

    // perly.y calls this `sideff`
    expression_statement: $ => choice(
      $._expr,
      $._postfix_expressions,
      $.yadayada,
    ),
    _postfix_expressions: $ => choice(
      $.postfix_conditional_expression,
      $.postfix_loop_expression,
      $.postfix_for_expression,
    ),
    postfix_conditional_expression:     $ => seq($._expr, $._conditionals, field('condition', $._expr)),
    postfix_loop_expression:  $ => seq($._expr, $._loops,  field('condition', $._expr)),
    postfix_for_expression:    $ => seq($._expr, $._KW_FOR, field('list', $._expr)),
    yadayada: $ => '...',

    _else: $ => choice($.else, $.elsif),
    else: $ => seq('else', field('block', $.block)),
    elsif: $ =>
      seq('elsif', '(', field('condition', $._expr), ')',
        field('block', $.block),
        optional($._else)
      ),

    _expr: $ => choice($.lowprec_logical_expression, $._listexpr),
    lowprec_logical_expression: $ => choice(
      prec.left(2, binop('and', $._expr)),
      prec.left(1, binop('or', $._expr)),
    ),

    _listexpr: $ => choice(
      $.list_expression,
      $._term
    ),
    /* ensure that an entire list expression's contents appear in one big flat
    * list, while permitting multiple internal commas and an optional trailing one */
    list_expression: $ => seq(
      $._term, $._PERLY_COMMA, repeat(seq(optional($._term), $._PERLY_COMMA)), optional($._term)
    ),
    _term_rightward: $ => prec.right(seq(
      $._term,
      repeat(seq($._PERLY_COMMA_continue, $._PERLY_COMMA, optional($._term))),
      // NOTE - we need this here to create a conflict in order to go GLR to handle
      // `die 1, or => die` correctly
      optional(seq($._PERLY_COMMA_continue, $._PERLY_COMMA))
    )),

    _subscripted: $ => choice(
      /* TODO:
       * gelem { expr ; }
       */
      $.array_element_expression,
      $.hash_element_expression,
      $.coderef_call_expression,
      $.anonymous_slice_expression,
    ),

    // NOTE - we have container_variable as a named node so we can match against it nicely
    // for highlighting.
    container_variable: $ => seq('$', $._var_indirob),
    _hash_key: $ => choice($._brace_autoquoted, $._expr),
    hash_element_expression: $ => choice(
      // perly.y matches scalar '{' expr '}' here but that would yield a scalar var node
      seq(field('hash', $.container_variable),     '{', field('key', $._hash_key), '}'),
      prec.left(TERMPREC.ARROW, seq($._term, '->', '{', field('key', $._hash_key), '}')),
      seq($._subscripted,                          '{', field('key', $._hash_key), '}'),
    ),
    _term: $ => choice(
      $.assignment_expression,
      $.binary_expression,
      $.equality_expression,
      $.relational_expression,
      $.unary_expression,
      $.preinc_expression,
      $.postinc_expression,
      $.anonymous_array_expression,
      $.anonymous_hash_expression,
      $.anonymous_subroutine_expression,
      $.do_expression,
      $.eval_expression,
      $.conditional_expression,
      $.refgen_expression,
      $.localization_expression,
      seq('(', $._expr, ')'),
      $.quoted_word_list,
      $.heredoc_token,
      $.command_heredoc_token,
      $.stub_expression,
      $.scalar,
      $.glob,
      $.hash,
      $.array,
      $.arraylen,
      $._subscripted,
      $.slice_expression,
      $.keyval_expression,
      /* THING
       * amper
       * amper '(' ')'
       * amper '(' expr ')'
       * NOAMP -- wtf even is this thing?
       */
      $.scalar_deref_expression,
      $.array_deref_expression,
      $.hash_deref_expression,
      $.amper_deref_expression,
      $.glob_deref_expression,
      $.loopex_expression,
      $.goto_expression,
      $.return_expression,
      $.undef_expression,
      /* NOTOP listexpr
       * UNIOP
       * UNIOP block
       * UNIOP term
       */
      $.require_expression,
      /* UNIOPSUB
       * UNIOPSUB term */
      $.func0op_call_expression,
      $.func1op_call_expression,
      /* PMFUNC */
      $.bareword,
      $.autoquoted_bareword,
      $._listop,

      /* perly.y doesn't know about `my` because that is handled weirdly in
       * toke.c but we'll have to do it differently here
       */
      $.variable_declaration,

      // legacy
      $.primitive,

      $._literal,
    ),

    assignment_expression: $ =>
      prec.right(TERMPREC.ASSIGNOP, binop($._ASSIGNOP, $._term)),

    // perly.y calls this `termbinop`
    relational_expression: $ =>
      prec.right(TERMPREC.CHRELOP, choice(
        binop.listassoc($._CHRELOP, $._CHRELOP_continue, $._term),
        binop.nonassoc($, $._NCRELOP, $._term),
      )
    ),

    // perly.y calls this `termunop`
    postinc_expression: $ =>
      prec(TERMPREC.POSTINC, unop_post(choice('++', '--'), $._term)),

    variable_declaration: $ => prec.left(TERMPREC.QUESTION_MARK+1,
      seq(
        choice('my', 'our'),
        choice(
          field('variable', alias($._declare_scalar, $.scalar)),
          field('variable', alias($._declare_array, $.array)),
          field('variable', alias($._declare_hash, $.hash)),
          field('variables', $._decl_variable_list)),
        optseq(':', optional(field('attributes', $.attrlist))))
    ),

    _decl_variable_list: $ => paren_list_of(
      choice(
        $.undef_expression,
        alias($._declare_scalar, $.scalar),
        alias($._declare_array, $.array),
        alias($._declare_hash, $.hash),
      )
    ),

    return_expression: $ => prec(TERMPREC.LSTOP, seq('return', optional($._term_rightward))),

    /* Perl just considers `undef` like any other UNIOP but it's quite likely
     * that tree consumers and highlighters would want to handle it specially
     */
    function_call_expression: $ =>
      seq(field('function', $.function), '(', $._NONASSOC, optional(field('arguments', $._expr)), ')'),
    ambiguous_function_call_expression: $ => 
      prec(TERMPREC.LSTOP, seq(field('function', $.function), field('arguments', $._term_rightward))),
    function: $ => $._FUNC,

    scalar:   $ => seq('$',  $._var_indirob),
    _declare_scalar:   $ => seq('$',  $._varname),
    array:    $ => seq('@',  $._var_indirob),
    _declare_array:    $ => seq('@',  $._varname),
    _HASH_PERCENT: $ => token(prec(2, '%')),
    hash:     $ => seq($._HASH_PERCENT, $._var_indirob),
    _declare_hash:    $ => seq($._HASH_PERCENT,  $._varname),

    _var_indirob: $ => choice(
      $._indirob,
      seq(
        $._PERLY_BRACE_OPEN,
        choice($._bareword, $._autoquotables, $._ident_special, /\^[A-Z]\w*/ ),
        $._brace_end_zw, '}'
      )
    ),

    _FUNC: $ => $._bareword,
    _ASSIGNOP: $ => choice(
      '=', '**=',
      '+=', '-=', '.=',
      '*=', '/=', '%=', 'x=',
      '&=', '|=', '^=',
      // TODO: Also &.= |.= ^.= when enabled
      '<<=', '>>=',
      '&&=', '||=', '//=',
    ),
    _CHRELOP: $ => choice('<', '<=', '>=', '>', 'lt', 'le', 'ge', 'gt'),
    _NCRELOP: $ => choice('isa'),
    _PERLY_COMMA: $ => choice(',', '=>'),

    _KW_USE: $ => choice('use', 'no'),
    _KW_FOR: $ => choice('for', 'foreach'),
    _PHASE_NAME: $ => choice('BEGIN', 'INIT', 'CHECK', 'UNITCHECK', 'END'),

    // Anything toke.c calls FUN0 or FUN0OP; the distinction does not matter to us
    comment: $ => token(/#.*(\r?\n\s*#.*)*/),

    __DATA__: $ => seq(
      choice(
        seq(
          alias(choice('__DATA__', '__END__'), $.eof_marker),
          /.*/, // ignore til end of line
          alias($._gobbled_content, $.data_section)
        ),
        // we need to use a hack for CTRL-Z or else it can't compile on windoze
        // these don't create a __DATA__ fh, so their _gobbled_content stays hidden
        seq(
          alias(choice('\x04', $._ctrl_z_hack), $.eof_marker),
          $._gobbled_content
        )
      ),
    ),

    // toke.c calls this a THING and that is such a generic unhelpful word,
    // we'll call it this instead
    string_literal: $ => choice($._q_string),
    _q_string: $ => seq(
      choice(
        seq('q', $._quotelike_begin),
        $._apostrophe
      ),
      optional($._noninterpolated_string_content),
      $._quotelike_end
    ),
    package: $ => $._bareword,
    _version: $ => prec(1, choice($.number, $.version)),
    // we have to up the lexical prec here to prevent v5 from being read as a bareword
    version: $ => token(prec(1, /v[0-9]+(?:\.[0-9]+)*/)),

    // NOTE - we MUST do it this way, b/c if we don't include every literal token, then TS
    // will not even consider the consuming rules. Lexical precedence...
    // also, all of these rules are inlined up top
    _conditionals: $ => choice('if', 'unless'),
    _loops: $ => choice('while', 'until'),
    _autoquotables: $ => choice($._func0op, $._func1op, $._keywords, $._quotelikes),
    // we need dynamic precedence here so we can resolve things like `print -next`
    autoquoted_bareword: $ => prec.dynamic(2, choice(
      // NOTE - these have zw lookaheads so they override just being read as barewords
      seq(choice($._identifier, $._autoquotables), $._fat_comma_zw),
      // give this autoquote the highest precedence we gots
      prec(TERMPREC.PAREN, seq('-', choice($._bareword, $._autoquotables))),
    )),
    identifier: $ => prec(2, $._identifier),
    _identifier: $ => /[a-zA-Z_]\w*/,
    bareword: $ => prec.dynamic(1, $._bareword),
    // _bareword is at the very end b/c the lexer prefers tokens defined earlier in the grammar 
    _bareword: $ => choice($._identifier, /((::)|([a-zA-Z_]\w*))+/),  // TODO: unicode
    ...primitives,
  }
})
