test/corpus/autoquote
================================================================================
AUTOQUOTED => EXPR
================================================================================
hello  # tree-sitter is magical!
  => 'world';
shift => 'up';
plain::bareword => 'here';
--------------------------------------------------------------------------------
(source_file
  (expression_statement (list_expression (autoquoted_bareword (comment)) (string_literal)))
  (expression_statement (list_expression (autoquoted_bareword) (string_literal)))
  (expression_statement (list_expression (bareword) (string_literal)))
)
================================================================================
quotelike followed by =>
================================================================================
q = > only one string=;
q => 'two strings';
q=>'still two';
--------------------------------------------------------------------------------
(source_file
  (expression_statement (string_literal))
  (expression_statement (list_expression (autoquoted_bareword) (string_literal)))
  (expression_statement (list_expression (autoquoted_bareword) (string_literal)))
)
================================================================================
hash autoquoting
================================================================================
$hash{quoted};
$hash{shift};
--------------------------------------------------------------------------------
(source_file
  (expression_statement
    (hash_element_expression
      hash: (container_variable)
      key: (autoquoted_bareword)))
  (expression_statement
    (hash_element_expression
      hash: (container_variable)
      key: (autoquoted_bareword)))
)
================================================================================
hash autoquoting for quotelike
================================================================================
$hash{q{why would you do this?}};
$hash{q};
--------------------------------------------------------------------------------
(source_file
  (expression_statement
    (hash_element_expression
      hash: (container_variable)
      key: (string_literal)))
  (expression_statement
    (hash_element_expression
      hash: (container_variable)
      key: (autoquoted_bareword)))
)
================================================================================
indirob autoquoting
================================================================================
${bareword};
${Long::Bareword};
${q};
${^O};
${^MATCH};
${1};
--------------------------------------------------------------------------------
(source_file
  (expression_statement (scalar))
  (expression_statement (scalar))
  (expression_statement (scalar))
  (expression_statement (scalar))
  (expression_statement (scalar))
  (expression_statement (scalar))
)
=================================================================================
autoquoting keywords
=================================================================================
if =>;
for =>;
return =>;
try =>;
defer =>;
--------------------------------------------------------------------------------
(source_file
  (expression_statement (list_expression (autoquoted_bareword)))
  (expression_statement (list_expression (autoquoted_bareword)))
  (expression_statement (list_expression (autoquoted_bareword)))
  (expression_statement (list_expression (autoquoted_bareword)))
  (expression_statement (list_expression (autoquoted_bareword)))
)
=================================================================================
autoquoting postfix
=================================================================================
return unless 9001;
return unless =>;
--------------------------------------------------------------------------------
(source_file
  (expression_statement
    (postfix_conditional_expression
      (return_expression)
      (number)
      ))
  (expression_statement (return_expression (autoquoted_bareword)))
)
=================================================================================
autoquoting lowprec (list-expr)
=================================================================================
1 or die;
1, or die;
1, or => die;
--------------------------------------------------------------------------------
(source_file
  (expression_statement (lowprec_logical_expression (number) (bareword)))
  (expression_statement (lowprec_logical_expression (list_expression (number)) (bareword)))
  (expression_statement (list_expression (number) (autoquoted_bareword) (bareword)))
)
=================================================================================
autoquoting lowprec (ambiguous_func)
=================================================================================
die or die;
die or => die;
die 1, or die;
die 1, or => die;
--------------------------------------------------------------------------------
(source_file
  (expression_statement
    (lowprec_logical_expression
      (bareword)
      (bareword)))
  (expression_statement
    (ambiguous_function_call_expression (function) (autoquoted_bareword) (bareword))
    )
  (expression_statement
    (lowprec_logical_expression
      (ambiguous_function_call_expression
        (function)
        (number))
      (bareword)))
  (expression_statement
    (ambiguous_function_call_expression
      (function)
      (number)
      (autoquoted_bareword)
      (bareword)))
)
=================================================================================
autoquoting else blocks
=================================================================================
if (1) { ... } else =>;
if (1) { ... } elsif (1) { ... } else =>;
if (1) { ... } elsif =>;
--------------------------------------------------------------------------------
(source_file
  (conditional_statement (number) (block (expression_statement (yadayada)) ))
  (expression_statement (list_expression (autoquoted_bareword)))

  (conditional_statement (number) (block (expression_statement (yadayada)) )
    (elsif (number) (block (expression_statement (yadayada))))
  )
  (expression_statement (list_expression (autoquoted_bareword)))

  (conditional_statement (number) (block (expression_statement (yadayada)) ))
  (expression_statement (list_expression (autoquoted_bareword)))
)
=================================================================================
unary minus autoquoting
=================================================================================
-next;
-next and 1;
say -next;
print -next and 1;
--------------------------------------------------------------------------------
(source_file
 (expression_statement
  (autoquoted_bareword))
 (expression_statement
  (lowprec_logical_expression
   (autoquoted_bareword)
   (number)))
 (expression_statement
   (ambiguous_function_call_expression
    (function)
    (autoquoted_bareword)))
 (expression_statement
  (lowprec_logical_expression
   (ambiguous_function_call_expression
    (function)
    (autoquoted_bareword))
   (number)))
)
